Úprava geometrie a velikosti textů

--- a/manual/manual.tex
+++ b/manual/manual.tex
@@ -1,9 +1,10 @@
 \documentclass[a4paper]{article}
 
-\usepackage[top=1.5cm,bottom=1.5cm,left=1.5cm,right=1.5cm]{geometry}
+\usepackage[top=1.5cm,bottom=1.5cm,left=2.5cm,right=2.5cm]{geometry}
+\usepackage[czech]{babel}
 
-\title{\Huge Parní sčítačka\\\Large Uživatelská příručka}
-\author{\large Parní mlátičky \\\normalsize Marek Havel \\\normalsize Ondřej Zobal\\\normalsize Vladimír Hucovič\\\normalsize Petr Kolouch}
+\title{\Huge Parní sčítačka\\\huge Uživatelská příručka}
+\author{\LARGE tým Parní mlátičky \\ Marek Havel \\ Ondřej Zobal\\ Vladimír Hucovič\\ Petr Kolouch}
 \date{\today}
 
 \begin{document}
