Přidány informace o nastavení přesnosti a historii výpočtů

--- a/manual/manual.tex
+++ b/manual/manual.tex
@@ -106,4 +106,6 @@ $\tan{x}$ & T \\
 
 Výsledek lze získat zmáčknutím klávesy \verb|=| na obrazovce.
 
+V menu v levé horní části obrazovky se lze podívat na dřívější příklady a nastavit přesnost kalkulačky.
+
 \end{document}
